--- a/css/tel.css
+++ b/css/tel.css
@@ -2,19 +2,21 @@
 .head {
     border-bottom: 1px solid var(--cornflower);
     position: relative;
+
 }
 
 .head-btn-open{
-
+display: block;
+margin-left: auto;
 }
 
 .head-open{
-fill: var(--navi-blue);
+display: block;
 }
 
 .head-btn-open{
  border: none;
- background-color: transparent;
+ 
 }
 
 .head-btn-close{
@@ -51,6 +53,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 
 .logo {
+    display: inline-block;
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -67,8 +70,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 .head-flex {
-    display: flex;
-    align-items: center
+
 }
 
 .head-navigation-list-link {
