--- a/css/tel.css
+++ b/css/tel.css
@@ -10,13 +10,22 @@ display: block;
 margin-left: auto;
 }
 
-.head-open{
-display: block;
+
+.close{
+height: 3.5px;
+width: 100%;
+background-color: var(--navi-blue);
+border-radius: 4px;
 }
 
 .head-btn-open{
  border: none;
- 
+ display: flex;
+ background-color: transparent;
+ width: 32px;
+ height: 22px;
+flex-wrap: wrap;
+align-items: center;
 }
 
 .head-btn-close{
@@ -31,6 +40,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 .head-close{
  display: block;
+ margin-left: auto;
 }
 
 .menu-container {
@@ -42,7 +52,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
     padding: 32px;
     background-color: var(--write-title);
     z-index: 999;
-
+    padding: 24px 24px 40px 40px;
     transform: translateY(-100%);
     transition: transform 250ms ease-in-out;
 }
@@ -50,6 +60,8 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 .menu-container.is-open {
     transform: translateY(0);
 }
+
+
 
 
 .logo {
@@ -73,11 +85,55 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 }
 
-@media screen and (max-width:480px) {
+
+
+@media screen and (max-width:480px),(max-width:768px) {
     .nav-flex{
         display: flex;
         align-items: center;
     }
+    .head-navigation-list-link {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 40px;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: #2E2F42;
+        }
+    
+    .link {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 40px;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: #2E2F42;
+        }
+    
+    .head-navigation-list {
+        padding: 0;
+        margin: 0;
+        }
+    
+    .contacts-list {
+        padding: 0;
+        margin: 0;
+        }
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-mob.jpg);
+        max-width: 360px;
+        max-width: 767px;
+        padding-top: 112px;
+        padding-bottom: 112px;
+        }
+
+    .hero-header {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 40px;
+        }
 }
 
 .head-navigation-list-link {
@@ -91,6 +147,21 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 .head-navigation-list-link:is(:active, :hover, :focus) {
     color: var(--ocean);
+}
+
+@media screen and (max-width:480px) {
+
+ .about-svg{
+    display: none;
+ }
+
+ .product{
+    display: none;
+ }
+
+ 
+
+
 }
 
 .contacts-mail {
@@ -130,11 +201,6 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
    
 
 }
-@media screen and (min-width:480px) {
-    .hero{
-        background-position: top center;
-    }
-}
 
 .hero-header {
     text-align: center;
@@ -154,6 +220,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: var(--write-title);
+    margin: 0 auto;
     padding: 16px 32px;
     border: 0;
     transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
