--- a/css/global.css
+++ b/css/global.css
@@ -82,8 +82,14 @@ body {
 
 @media screen and (min-width:360px) {
     .conteiner {
-        width: 360px;
+        min-width: 360px;
     }
+
+          .hero-header {
+              font-size: 36px;
+              text-transform: capitalize;
+              max-width: 320px;
+          }
 }
 
 
