--- a/css/tel.css
+++ b/css/tel.css
@@ -121,19 +121,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
         padding: 0;
         margin: 0;
         }
-    .hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-mob.jpg);
-        max-width: 360px;
-        max-width: 767px;
-        padding-top: 112px;
-        padding-bottom: 112px;
-        }
-
-    .hero-header {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 40px;
-        }
+  
 }
 
 .head-navigation-list-link {
@@ -215,6 +203,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 .hero-btn {
     background-color: var(--iris);
+    display: block;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     line-height: 1.5;
@@ -287,9 +276,28 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 /*-----------------ABOUT------------------*/
 
-@media screen and (min-width:480px) {
+@media screen and (min-width:480px),(max-width:768px) {
     .about-svg {
         display: none;
+    }
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-mob.jpg);
+        min-width: 360px;
+        max-width: 767px;
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+    
+    .hero-header {
+        font-size: 36px;
+        text-transform: capitalize;
+        max-width: 320px;
+        margin-bottom: 72px;
+    }
+        
+    .hero-btn{
+        margin: 0 auto;
+        
     }
 }
 
@@ -327,8 +335,24 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 @media screen and (min-width:480px) {
+
+    .about{
+        padding-top: 96px;
+    }
     .product {
         display: none;
+    }
+    .about-list-header{
+        text-align: center;
+        font-size: 36px;
+        line-height: 1.1;
+        font-weight: 700;
+        margin-bottom: 8px;
+    }
+
+    .about-list-text{
+        font-weight: 500;
+        margin-bottom: 72px;
     }
 }
 
@@ -354,6 +378,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
     
 
 }
+
 
 .teamcart {
     background: var(--cloude);
@@ -421,7 +446,24 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 /*-----------------custom---------------*/
+@media screen and (min-width:480px),
+(max-width:768px){
+    .teamcart{
+        padding: 96px 0;
+    }
 
+    .teamcart-header{
+        margin-bottom: 96px;
+    }
+
+    .teamcart-content{
+        max-width: 264px;
+        margin: 0 auto;
+        margin-bottom: 72px;
+
+    }
+
+}
 .custom {
 
 }
@@ -463,7 +505,32 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 /*------------------FOOTER---------------*/
+@media screen and (min-width:480px),
+(max-width:768px){
+    .custom{
+        padding-bottom: 96px;
+    }
 
+    .custom-title{
+        margin-bottom: 72px;
+    }
+
+
+    .custom-content{
+        min-width: 190px;
+        min-height: 88px;
+        margin-bottom: 88px;
+
+    }
+
+    .custom-list{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+}
 .ftr {
     background-color: var(--navi-blue);
 }
@@ -577,6 +644,7 @@ display: block;
 
 .ftr-form-btn {
     font-family: 'Roboto';
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -603,6 +671,52 @@ display: block;
 
 .ftr-form-flex {
 
+}
+@media screen and (min-width:480px),
+(max-width:768px){
+    .ftr{
+       padding: 96px 0;
+    }
+
+    .ftr-input{
+        width: 100%;
+        margin-bottom: 16px;
+    }
+
+    .ftr-content{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .ftr-flex{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .ftr-text{
+        margin: 0 80px;
+        min-width: 268px;
+    }
+    .ftr-title{
+        text-align: center;
+        margin-top: 72px;
+    }
+
+    .ftr-form-title{
+        margin-top: 72px;
+        text-align: center;
+        margin-bottom: 16px;
+    }
+
+    .ftr-btn-flex{
+        display: flex;
+        justify-content: center;
+    }
+
+    
+   
 }
 
 /*--------------------------Form--------------------------*/
@@ -784,6 +898,8 @@ display: block;
 .svg {
     top: 29px;
 }
+@media screen and (min-width:480px),
+(max-width:768px){}
 
 /*-------------PORTFOLIO NAV---------------*/
 .main-nav {
