--- a/css/tel.css
+++ b/css/tel.css
@@ -334,7 +334,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 .product {   
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width:480px), (min-width:360px) {
 
     .about{
         padding-top: 96px;
@@ -446,8 +446,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 /*-----------------custom---------------*/
-@media screen and (min-width:480px),
-(max-width:768px){
+@media screen and (min-width:480px), (max-width:768px), (min-width:360px){
     .teamcart{
         padding: 96px 0;
     }
@@ -505,8 +504,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 }
 
 /*------------------FOOTER---------------*/
-@media screen and (min-width:480px),
-(max-width:768px){
+@media screen and (min-width:480px), (max-width:768px), (min-width:360px){
     .custom{
         padding-bottom: 96px;
     }
@@ -672,8 +670,7 @@ display: block;
 .ftr-form-flex {
 
 }
-@media screen and (min-width:480px),
-(max-width:768px){
+@media screen and (min-width:480px), (max-width:768px), (min-width:360px){
     .ftr{
        padding: 96px 0;
     }
@@ -899,7 +896,15 @@ display: block;
     top: 29px;
 }
 @media screen and (min-width:480px),
-(max-width:768px){}
+(max-width:768px){
+    .form{
+        min-width: 392px;
+    }
+    .hero-btn-modal{
+        margin-left: 344px;
+        margin-top: 24px;
+    }
+}
 
 /*-------------PORTFOLIO NAV---------------*/
 .main-nav {
