--- a/css/tel.css
+++ b/css/tel.css
@@ -276,7 +276,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
 
 /*-----------------ABOUT------------------*/
 
-@media screen and (min-width:480px),(max-width:768px) {
+@media screen and (min-width:480px),(max-width:768px),(min-width:360px) {
     .about-svg {
         display: none;
     }
