--- a/css/tel.css
+++ b/css/tel.css
@@ -282,6 +282,7 @@ transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 0.25s cubi
     }
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-mob.jpg);
+        width: 100%;
         min-width: 360px;
         max-width: 767px;
         padding-top: 112px;
