--- a/css/global.css
+++ b/css/global.css
@@ -74,40 +74,31 @@ body {
 
 
 .conteiner {
-    /* outline: 3px solid red; */
+    outline: 3px solid red;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;   
 }
 
-@media screen and (min-width:360px) {
-    .conteiner {
-        min-width: 360px;
-    }
 
-          .hero-header {
-              font-size: 36px;
-              text-transform: capitalize;
-              max-width: 320px;
-          }
-}
 
 
 @media screen and (min-width:480px){
     .conteiner{
-        width: 480px;
+        max-width: 480px;
+       
       
     }
 }
 
 @media screen and (min-width:768px) {
     .conteiner {
-        width: 768px;
+        max-width: 768px;
     }
 }
 
 @media screen and (min-width:1200px) {
     .conteiner {
-        width: 1200px;
+        max-width: 1200px;
     }
 }
