--- a/css/tablet.css
+++ b/css/tablet.css
@@ -14,5 +14,121 @@
     .menu-container{
         position: static;
         background-color: transparent;
+        width: unset;
+        height: unset;
+        transform: unset;
+        display: flex;
+        align-items: center;
+        padding: 0;
+        visibility: visible;
+    }
+    .head-svg{
+        display: none;
+    }
+    .contacts-list{
+        flex-wrap: nowrap;
+        flex-direction: column;
+        margin: 0;
+        gap: 12px;
+        margin-left: auto;
+    }
+    .link:is(:hover,:focus){
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    }
+    .hero-header{
+        font-weight: 700;
+        text-transform: unset;
+        font-size: 56px;
+        text-align: center;
+        min-width: 496px;
+        margin-bottom: 36px;
+    }
+
+
+    .hero {
+         background-color: var(--navi-blue);
+         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg-tab.jpg);
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         }
+    
+
+    .head-navigation-list-link{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    .link{
+        font-family: 'Roboto';
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.04em;
+        color: #434455;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .head-navigation-list{
+        display: flex;
+        gap: 40px;
+        margin: 0;
+    }
+
+    .about-list-flex{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+    }
+    .about-list{
+        max-width: 356px;
+    }
+    .about-list-header{
+        text-align: left;
+       
+    }
+    .teamcart-content{
+    margin: 0;
+    margin-bottom: 40px;
+    }
+    
+    .teamcart-content:nth-child(3){
+        margin-bottom: 0;
+    }
+    .teamcart-content:nth-child(4) {
+        margin-bottom: 0;
+    }
+    
+    .teamcart{
+        padding: 96px 0;
+    }
+
+    .teamcart-list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 24px;
+        
+    }
+
+    .custom-content{
+        margin-bottom: 72px;
+    }
+
+    .custom{
+        padding: 96px 0;
+    }
+    .ftr-content{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .ftr-flex{
+        min-width: 264px;
     }
 }
