--- a/css/tel.css
+++ b/css/tel.css
@@ -592,6 +592,8 @@
 }
 
 .ftr-text {
+    display: block;
+    margin: 0 auto;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
