--- a/css/tel.css
+++ b/css/tel.css
@@ -73,6 +73,7 @@
 .is-open{
     visibility: visible;
     transition: transform 250ms ease-in-out;
+    overflow: scroll;
 }
 
 
@@ -114,7 +115,8 @@
     }
 
     .contacts-list{
-        margin-top: 284px;
+        margin-top: 268px;
+        margin-bottom: 0;
     }
 
     .head-navigation-list-link {
@@ -147,6 +149,7 @@
 
     .head-navigation-list {
         padding: 0;
+        margin: 0;
        
     }
 
@@ -594,6 +597,7 @@
 .ftr-text {
     display: block;
     margin: 0 auto;
+    max-width: 264px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
