--- a/css/tel.css
+++ b/css/tel.css
@@ -960,7 +960,7 @@
     margin: 0;
     margin-bottom: 72px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 24px;
     ;
