--- a/css/tablet.css
+++ b/css/tablet.css
@@ -28,15 +28,19 @@
         margin-left: auto;
     }
     .contacts-list{
-        display: block;
+        display: flex;
+        gap: 12px;
         margin: 0;
         margin-left: auto;
+        align-items: center;
     }
     .link:is(:hover,:focus){
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
+    letter-spacing: 0.04em;
+    text-transform: none;
     }
     .hero-header{
         font-weight: 700;
@@ -45,6 +49,10 @@
         text-align: center;
         min-width: 496px;
         margin-bottom: 36px;
+    }
+
+    .form{
+        min-width: 408px;
     }
 
 
@@ -63,7 +71,10 @@
         line-height: 1.5;
     }
 
-    .contact-conteiner
+        .contacts-mail {
+            margin: 0;
+        }
+
 
     .link{
         font-family: 'Roboto';
@@ -73,7 +84,6 @@
         letter-spacing: 0.04em;
         color: #434455;
         padding-bottom: 16px;
-        display: block;
     }
 
     .head-navigation-list{
@@ -166,5 +176,43 @@
     .ftr-form-flex{
         display: flex;
         gap: 24px;
+    }
+
+    .logo{
+        padding: 24px 0;
+    }
+    .head-navigation-list-link{
+    padding: 24px 0;
+    }
+
+    .head-navigation-list-link.active{
+        color: var(--ocean);
+    }
+
+    .active::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #404BBF;
+    border-radius: 2px;
+    position: absolute;
+    top: calc(100% - 1px);
+    left: 0;
+    }
+
+    .main-nav{
+        justify-content: center;
+    }
+
+    .content-list{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        row-gap: 48px;
+        column-gap: 18px;
+        position: relative;
     }
 }
