--- a/css/desctop.css
+++ b/css/desctop.css
@@ -115,4 +115,12 @@
     padding: 100px 0;
 }
 
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-bg-desctop-2x.jpg");
+    }
+}
+
 }
