--- a/css/tel.css
+++ b/css/tel.css
@@ -1096,3 +1096,11 @@
     transform: translateY(0);
     opacity: 1;
 }
+
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+    .hero{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-bg-tel-2x.jpg");
+    }
+}
