--- a/css/tablet.css
+++ b/css/tablet.css
@@ -215,4 +215,12 @@
         column-gap: 18px;
         position: relative;
     }
+
+        @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+            .hero {
+                background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero-bg-tab-2x.jpg");
+            }
+        }
 }
