--- a/css/tel.css
+++ b/css/tel.css
@@ -64,7 +64,7 @@
     width: 100vw;
     height: 100%;
     background-color: var(--write-title);
-    z-index: 999;
+    z-index: 20;
     padding: 24px 24px 40px 40px;
     transform: translateY(-100%);
     transition: transform 250ms ease-in-out;
@@ -72,11 +72,13 @@
 
 .menu-container.is-open {
     transform: translateY(0);
+    transition: transform 250ms ease-in-out;
+    transition: transform 250ms ease-in-out, visibility 250ms ease-in-out;
 }
 
 .is-open{
     visibility: visible;
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms ease-in-out, visibility  250ms ease-in-out;
     overflow: scroll;
 }
 
@@ -304,6 +306,7 @@
 }
 
 .bd-modal {
+    z-index: 25;
     top: 0;
     left: 0;
     width: 100%;
@@ -325,6 +328,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 999;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #FFFFFF;
@@ -542,7 +546,9 @@
 
 
 
-.custom {}
+.custom {
+    padding-top: 96px;
+}
 
 
 .custom-title {
